# src/app/api/models.ts
@@ -6,8 +6,7 @@ export { CreateStudentRequestDto } from './models/create-student-request-dto';
 export { ErrorDto } from './models/error-dto';
 export { Int32ResponseDto } from './models/int-32-response-dto';
 export { ProblemDetails } from './models/problem-details';
-export { Student } from './models/student';
-export { StudentIEnumerableResponseDto } from './models/student-i-enumerable-response-dto';
 export { StudentViewModel } from './models/student-view-model';
+export { StudentViewModelIEnumerableResponseDto } from './models/student-view-model-i-enumerable-response-dto';
 export { StudentViewModelResponseDto } from './models/student-view-model-response-dto';
 export { UpdateStudentRequestDto } from './models/update-student-request-dto';
