# src/app/api/models/student-view-model-i-enumerable-response-dto.ts
@@ -3,9 +3,9 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 import { ErrorDto } from '../models/error-dto';
-import { Student } from '../models/student';
-export interface StudentIEnumerableResponseDto {
-  data?: Array<Student> | null;
+import { StudentViewModel } from '../models/student-view-model';
+export interface StudentViewModelIEnumerableResponseDto {
+  data?: Array<StudentViewModel> | null;
   errors?: Array<ErrorDto> | null;
   message?: string | null;
 }
