# src/app/api/models/student-view-model.ts
@@ -3,8 +3,9 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 export interface StudentViewModel {
-  genderId?: number;
-  id?: number;
-  lastName?: string | null;
-  name?: string | null;
+  genderId: number;
+  genderName: string | null;
+  id: number;
+  lastName: string | null;
+  name: string | null;
 }
