# src/app/api/models/student.ts
@@ -1,10 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/* Code generated by ng-openapi-gen DO NOT EDIT. */
-
-export interface Student {
-  genderId?: number;
-  id?: number;
-  lastName?: string | null;
-  name?: string | null;
-}
